--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -6,12 +6,12 @@ env:
   SERVER_IP: '135.181.202.179'
   DEPLOY_PATH: '/home/w3reg/staging.w3reg.org'
   BUILD_TARGET: 'production'
-  VITE_APP_WALLET_CONNECT_PROJECT_ID: 'rotko-w3-registrar'
-  VITE_APP_DEFAULT_WS_URL: 'wss://people-paseo.dotters.network'
-  VITE_APP_DEFAULT_WS_URL_RELAY: 'wss://paseo.dotters.network'
-  VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO: '1'
-  VITE_APP_AVAILABLE_CHAINS: 'paseo_people'
-  VITE_APP_DEFAULT_CHAIN: 'paseo_people'
+  VITE_APP_WALLET_CONNECT_PROJECT_ID: w3reg
+  VITE_APP_DEFAULT_WS_URL: wss://people-paseo.dotters.network
+  VITE_APP_DEFAULT_WS_URL_RELAY: wss://paseo.dotters.network
+  VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO: 1
+  VITE_APP_AVAILABLE_CHAINS: paseo_people
+  VITE_APP_DEFAULT_CHAIN: paseo_people
 
 on:
   push:
@@ -54,14 +54,15 @@ jobs:
         run: |
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF 
             set -euo pipefail
-            rm -fr ${{ env.DEPLOY_PATH }}/w3registrar-www/nginx || true
-            mkdir -p ${{ env.DEPLOY_PATH }}/w3registrar-www
+            rm -fr ${{ env.DEPLOY_PATH }}/nginx || true
+            rm -fr ${{ env.DEPLOY_PATH }}/dist || true
+            mkdir -p ${{ env.DEPLOY_PATH }}
           EOF
-          scp -r ./nginx ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www
-          scp -r ./dist ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www/nginx
-          scp docker-compose.yaml ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www
-          ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF 
+          scp -r ./nginx ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
+          scp -r ./dist ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
+          scp docker-compose.yaml ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
+          ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF
             set -euo pipefail
-            cd ${{ env.DEPLOY_PATH }}/w3registrar-www
+            cd ${{ env.DEPLOY_PATH }}
             docker compose up --build -d web-nginx
           EOF
