Update dependencies for @reactive-dot, now with support for People Paseo

--- a/package.json
+++ b/package.json
@@ -31,10 +31,11 @@
     "@radix-ui/react-switch": "^1.1.2",
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.5",
-    "@reactive-dot/react": "^0.27.2",
+    "@reactive-dot/core": "0.29.0",
+    "@reactive-dot/react": "0.29.0",
     "@reactive-dot/utils": "^0.8.1",
-    "@reactive-dot/wallet-ledger": "^0.16.20",
-    "@reactive-dot/wallet-walletconnect": "^0.17.0",
+    "@reactive-dot/wallet-ledger": "0.16.21",
+    "@reactive-dot/wallet-walletconnect": "0.17.1",
     "@unocss/reset": "^0.63.4",
     "bignumber.js": "^9.1.2",
     "bun": "^1.1.38",
