--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -66,3 +66,8 @@ jobs:
             cd ${{ env.DEPLOY_PATH }}
             docker compose up --build -d web-nginx
           EOF
+      - name: Debug Build
+        run: |
+          env
+          ls -la
+          ls -la ./dist
