--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,5 +12,5 @@ services:
       context: .
       dockerfile: ./nginx/Dockerfile
     ports:
-      - 127.0.0.1:63999:80
+      - ${NGINX_HOST:-127.0.0.1}:63999:80
     restart: unless-stopped
