--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -5,6 +5,7 @@ env:
   SERVER_IP: '135.181.202.179'
   DEPLOY_PATH: '/home/w3reg/dev.w3reg.org'
   BUILD_TARGET: 'production'
+  NGINX_HOST: '127.0.0.1'
 
 on:
   pull_request:
@@ -41,15 +42,15 @@ jobs:
         run: |
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF
             set -euo pipefail
-            rm -fr ${{ env.DEPLOY_PATH }}/w3registrar-www/nginx || true
-            mkdir -p ${{ env.DEPLOY_PATH }}/w3registrar-www
-            cd ${{ env.DEPLOY_PATH }}/w3registrar-www
+            rm -fr ${{ env.DEPLOY_PATH }}/nginx || true
+            rm -fr ${{ env.DEPLOY_PATH }}/dist || true
+            mkdir -p ${{ env.DEPLOY_PATH }}
           EOF
-          scp -r ./nginx ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www/
-          scp -r ./dist ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www/nginx/
-          scp docker-compose.yaml ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/w3registrar-www/
+          scp -r ./nginx ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
+          scp -r ./dist ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
+          scp docker-compose.yaml ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF
             set -euo pipefail
             cd ${{ env.DEPLOY_PATH }}/w3registrar-www
-            docker compose up --build -d web-nginx
+            NGINX_HOST=${{ env.NGINX_HOST }} docker compose up --build -d web-nginx
           EOF
