--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -40,6 +40,7 @@ jobs:
 
       - name: Deploy to server
         run: |
+          set -euo pipefail
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF
             set -euo pipefail
             rm -fr ${{ env.DEPLOY_PATH }}/nginx || true
