--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -33,7 +33,7 @@ jobs:
             TIMESTAMP=\$(date +%Y%m%d%H%M%S)
             mkdir -p ${{ env.BACKUP_PATH }}
             if [ -d "${{ env.DEPLOY_PATH }}" ]; then
-              mv ${{ env.DEPLOY_PATH }}/${{ env.BACKUP_PATH }}/w3registrar-www-\$TIMESTAMP
+              mv ${{ env.DEPLOY_PATH }} ${{ env.BACKUP_PATH }}/w3registrar-www-\$TIMESTAMP
             fi
             cp -r ${{ env.STAGING_PATH }} ${{ env.DEPLOY_PATH }}
             cd ${{ env.DEPLOY_PATH }}
