Initially added example links

--- a/.env.example
+++ b/.env.example
@@ -12,5 +12,11 @@ VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/api
 
 VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people,rococo_people
 
+# Invite links for challenges
+VITE_APP_INVITE_LINK_DISCORD=https://github.com/rotkonetworks/
+VITE_APP_INVITE_LINK_MATRIX=https://matrix.to/#/#rotko:matrix.org
+VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/rotkonetworks
+VITE_APP_INVITE_LINK_EMAIL=mailto:w3reg@rotko.net
+
 # Optional
 VITE_APP_DEFAULT_CHAIN=rococo_people
