Update invite links

--- a/.env.example
+++ b/.env.example
@@ -13,9 +13,9 @@ VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/api
 VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people,rococo_people
 
 # Invite links for challenges
-VITE_APP_INVITE_LINK_DISCORD=https://github.com/rotkonetworks/
-VITE_APP_INVITE_LINK_MATRIX=https://matrix.to/#/#rotko:matrix.org
-VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/rotkonetworks
+VITE_APP_INVITE_LINK_DISCORD=https://discord.gg/Su6ZSZe3ra
+VITE_APP_INVITE_LINK_MATRIX="https://matrix.to/#/#w3reg:matrix.rotko.net"
+VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/w3registrar
 VITE_APP_INVITE_LINK_EMAIL=mailto:w3reg@rotko.net
 
 # Optional
