--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -22,8 +22,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build the Vite app
+      - name: Install Nix
         uses: cachix/install-nix-action@v30 
+
+      - name: Build the Vite app
         run: |
           cat .env.example | grep -v "#" > .env
           nix-shell --command "bash scripts/build.sh"
