Fix build dev workflow

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -24,6 +24,8 @@ jobs:
 
       - name: Install Nix
         uses: cachix/install-nix-action@v30 
+        with:
+          nix_path: nixpkgs=channel:nixos-stable
 
       - name: Build the Vite app
         run: |
