Fix build dev workflow

--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: Install Nix
         uses: cachix/install-nix-action@v30 
         with:
-          nix_path: nixpkgs=channel:nixos-stable
+          nix_path: nixpkgs=channel:nixos-unstable
 
       - name: Build the Vite app
         run: |
