--- a/.env.example
+++ b/.env.example
@@ -2,19 +2,18 @@ VITE_APP_WALLET_CONNECT_PROJECT_ID=rotko-w3-registrar
 VITE_APP_DEFAULT_WS_URL=wss://dev.rotko.net/people-rococo
 VITE_APP_DEFAULT_WS_URL_RELAY=wss://dev.rotko.net/rococo
 
-VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=19
-VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=17
-VITE_APP_REGISTRAR_INDEX__PEOPLE_WESTEND=18
-VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=16
-VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0
+VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=5 # fee 4,200,000,000
+VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=7   # fee 42,000,000,000
+VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=1    # fee 0
+VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0   # fee 0
 
 VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/api
 
 VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people,rococo_people
 
 # Invite links for challenges
-VITE_APP_INVITE_LINK_DISCORD=https://github.com/rotkonetworks/
-VITE_APP_INVITE_LINK_MATRIX=https://matrix.to/#/#rotko:matrix.org
+VITE_APP_INVITE_LINK_DISCORD=https://discord.gg/Su6ZSZe3ra
+VITE_APP_INVITE_LINK_MATRIX=https://matrix.to/#/#w3reg:matrix.rotko.net
 VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/rotkonetworks
 VITE_APP_INVITE_LINK_EMAIL=mailto:w3reg@rotko.net
 
