cd: rework workflows to using individual docker-compose

--- a/.github/workflows/deploy-app.yaml
+++ b/.github/workflows/deploy-app.yaml
@@ -6,7 +6,6 @@ env:
   DEPLOY_PATH: '/home/w3reg/app.w3reg.org'
   BACKUP_PATH: '/home/w3reg/backups'
   STAGING_PATH: '/home/w3reg/staging.w3reg.org'
-  NGINX_HOST: '127.0.0.3'
 
 on:
   workflow_dispatch:
@@ -15,6 +14,9 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.3
         with:
@@ -26,7 +28,7 @@ jobs:
           ssh-keyscan -t ed25519 ${{ env.SERVER_IP }} >> ~/.ssh/known_hosts
           chmod 644 ~/.ssh/known_hosts
 
-      - name: Deploy using rsync with backup
+      - name: Deploy app.w3reg.org
         run: |
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF
             set -euo pipefail
@@ -36,6 +38,13 @@ jobs:
               mv ${{ env.DEPLOY_PATH }} ${{ env.BACKUP_PATH }}/w3registrar-www-\$TIMESTAMP
             fi
             cp -r ${{ env.STAGING_PATH }} ${{ env.DEPLOY_PATH }}
-            cd ${{ env.DEPLOY_PATH }}
-            NGINX_HOST=${{ env.NGINX_HOST }} docker compose up --build -d web-nginx
+            EOF
+            
+            # Copy the app-specific docker-compose file
+            scp dockers/docker-compose-app.yaml ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/docker-compose.yaml
+            
+            ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF
+              set -euo pipefail
+              cd ${{ env.DEPLOY_PATH }}
+              docker compose up --build -d web-nginx
           EOF
