--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -5,12 +5,11 @@ env:
   SERVER_USER: 'w3reg'
   SERVER_IP: '135.181.202.179'
   DEPLOY_PATH: '/home/w3reg/staging.w3reg.org'
-  BUILD_TARGET: 'production'
-  NGINX_HOST: '127.0.0.2'
   VITE_APP_WALLET_CONNECT_PROJECT_ID: w3reg
   VITE_APP_DEFAULT_WS_URL: wss://people-paseo.dotters.network
   VITE_APP_DEFAULT_WS_URL_RELAY: wss://paseo.dotters.network
   VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO: 1
+  VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT: 1
   VITE_APP_AVAILABLE_CHAINS: paseo_people
   VITE_APP_DEFAULT_CHAIN: paseo_people
 
@@ -42,6 +41,7 @@ jobs:
           echo "VITE_APP_DEFAULT_WS_URL=${{ env.VITE_APP_DEFAULT_WS_URL }}" >> .env
           echo "VITE_APP_DEFAULT_WS_URL_RELAY=${{ env.VITE_APP_DEFAULT_WS_URL_RELAY }}" >> .env
           echo "VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=${{ env.VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO }}" >> .env
+          echo "VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=${{ env.VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT }}" >> .env
           echo "VITE_APP_AVAILABLE_CHAINS=${{ env.VITE_APP_AVAILABLE_CHAINS }}" >> .env
           echo "VITE_APP_DEFAULT_CHAIN=${{ env.VITE_APP_DEFAULT_CHAIN }}" >> .env
           cat .env | wc -l
@@ -67,9 +67,9 @@ jobs:
           EOF
           scp -r ./nginx ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
           scp -r ./dist ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
-          scp docker-compose.yaml ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}
+          scp dockers/docker-compose-staging.yaml ${{ env.SERVER_USER }}@${{ env.SERVER_IP }}:${{ env.DEPLOY_PATH }}/docker-compose.yaml
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF
             set -euo pipefail
             cd ${{ env.DEPLOY_PATH }}
-            NGINX_HOST=${{ env.NGINX_HOST }} docker compose up --build -d web-nginx
+            docker compose up --build -d web-nginx
           EOF
