ci: update .env.example to better suit wf

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,14 @@ VITE_APP_WALLET_CONNECT_PROJECT_ID=rotko-w3-registrar
 VITE_APP_DEFAULT_WS_URL=wss://dev.rotko.net/people-rococo
 VITE_APP_DEFAULT_WS_URL_RELAY=wss://dev.rotko.net/rococo
 
-VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=5 # fee 4,200,000,000
-VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=7   # fee 42,000,000,000
-VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=1    # fee 0
-VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0   # fee 0
+# fee 4,200,000,000
+VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=5 
+# fee 42,000,000,000
+VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=7   
+# fee 0
+VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=1    
+# fee 0
+VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0   
 
 VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/api
 
