--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "polkadot-api": "1.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.0",
     "rxjs": "^7.8.1",
     "tailwind-merge": "^2.5.4",
