--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -69,5 +69,6 @@ jobs:
           ssh ${{ env.SERVER_USER }}@${{ env.SERVER_IP }} << EOF
             set -euo pipefail
             cd ${{ env.DEPLOY_PATH }}
-            NGINX_PORT=53999 docker compose up --build -d web-nginx
+            echo "NGINX_PORT=53999" > .env
+            docker compose up --build -d web-nginx
           EOF
