docker: removing unneeded cmds on compose
still commented out incase in the future we need it or we want build
manually

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,18 +1,19 @@
 services:
-  web:
-    build:
-      context: .
-      dockerfile: Dockerfile
-      target: production
-    container_name: web
-    ports:
-      - "${PORT:-3000}:3000"
+  # NOTE: not needed for deploying through workflows
+  # web:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile
+  #     target: production
+  #   container_name: web
+  #   ports:
+  #     - "${PORT:-3000}:3000"
   web-nginx:
     build:
       context: .
       dockerfile: ./nginx/Dockerfile
-    depends_on:
-      - web
+    # depends_on:
+    #   - web
     ports:
       - "127.0.0.1:${NGINX_PORT:-63999}:80"
     restart: unless-stopped
