feat: Add contact links for Discord, Matrix, and Email in .env.example

--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,9 @@ VITE_APP_INVITE_LINK_MATRIX=https://matrix.to/#/#w3reg:matrix.rotko.net
 VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/rotkonetworks
 VITE_APP_INVITE_LINK_EMAIL=mailto:w3reg@rotko.net
 
+VITE_APP_CONTACT_LINK_DISCORD=https://discord.com/channels/1256944894250057738/1256957066439037028
+VITE_APP_CONTACT_LINK_MATRIX="https://matrix.to/#/#w3reg:matrix.rotko.net"
+VITE_APP_CONTACT_LINK_EMAIL=mailto:w3reg@rotko.net
+
 # Optional
 VITE_APP_DEFAULT_CHAIN=rococo_people
