fix: rm rococo support by default

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 VITE_APP_WALLET_CONNECT_PROJECT_ID=rotko-w3-registrar
-VITE_APP_DEFAULT_WS_URL=wss://dev.rotko.net/people-rococo
-VITE_APP_DEFAULT_WS_URL_RELAY=wss://dev.rotko.net/rococo
+VITE_APP_DEFAULT_WS_URL=wss://paseo-people.dotters.network
+VITE_APP_DEFAULT_WS_URL_RELAY=wss://paseo.dotters.network
 
 # fee 4,200,000,000
 VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=5 
@@ -11,9 +11,9 @@ VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=1
 # fee 0
 VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0   
 
-VITE_APP_CHALLENGES_API_URL=wss://dev.rotko.net/api
+VITE_APP_CHALLENGES_API_URL=wss://api.w3reg.org
 
-VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people,rococo_people
+VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people # rococo_people
 
 # Invite links for challenges
 VITE_APP_INVITE_LINK_DISCORD=https://discord.gg/Su6ZSZe3ra
@@ -22,4 +22,4 @@ VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/rotkonetworks
 VITE_APP_INVITE_LINK_EMAIL=mailto:w3reg@rotko.net
 
 # Optional
-VITE_APP_DEFAULT_CHAIN=rococo_people
+VITE_APP_DEFAULT_CHAIN=paseo_people
