--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@iconify/react": "^5.1.0",
+    "@paraspell/sdk": "^8.5.3",
     "@polkadot-api/descriptors": "file:.papi/descriptors",
     "@polkadot-api/docgen": "^0.0.8",
     "@polkadot-api/metadata-builders": "^0.8.2",
@@ -22,6 +23,7 @@
     "@polkadot-api/utils": "^0.1.2",
     "@polkadot/api": "^14.3.1",
     "@radix-ui/react-accordion": "^1.2.2",
+    "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.1.3",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-popover": "^1.1.3",
