--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,7 @@ VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people # rococo_pe
 
 # Invite links for challenges
 VITE_APP_INVITE_LINK_DISCORD=https://discord.gg/Su6ZSZe3ra
-VITE_APP_INVITE_LINK_MATRIX=https://matrix.to/#/#w3reg:matrix.rotko.net
+VITE_APP_INVITE_LINK_MATRIX="https://matrix.to/#/#w3reg:matrix.rotko.net"
 VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/rotkonetworks
 VITE_APP_INVITE_LINK_EMAIL=mailto:w3reg@rotko.net
 
