--- a/.github/workflows/deploy-dev.yaml
+++ b/.github/workflows/deploy-dev.yaml
@@ -33,27 +33,32 @@ jobs:
         with:
           nix_path: nixpkgs=channel:nixos-unstable
 
-      - name: Build the Vite app
-        env:
-          BUILD_TARGET: 'production'
+      - name: Set up environment
         run: |
           curl -fsSL https://bun.sh/install | bash -s "canary"
-          export BUN_INSTALL="$HOME/.bun"
-          export PATH=$BUN_INSTALL/bin:$PATH
           nix-shell --command "bun run scripts/safeParseEnv.js"
-          # our overrides will be appended last, so even duplicate, they'll take precedence
-          echo "VITE_APP_WALLET_CONNECT_PROJECT_ID=${{ env.VITE_APP_WALLET_CONNECT_PROJECT_ID }}" >> .env
-          echo "VITE_APP_DEFAULT_WS_URL=${{ env.VITE_APP_DEFAULT_WS_URL }}" >> .env
-          echo "VITE_APP_DEFAULT_WS_URL_RELAY=${{ env.VITE_APP_DEFAULT_WS_URL_RELAY }}" >> .env
-          echo "VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=${{ env.VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO }}" >> .env
-          echo "VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT=${{ env.VITE_APP_REGISTRAR_INDEX__PEOPLE_POLKADOT }}" >> .env
-          echo "VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA=${{ env.VITE_APP_REGISTRAR_INDEX__PEOPLE_KUSAMA }}" >> .env
-          echo "VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=${{ env.VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO }}" >> .env
-          echo "VITE_APP_AVAILABLE_CHAINS=${{ env.VITE_APP_AVAILABLE_CHAINS }}" >> .env
-          echo "VITE_APP_DEFAULT_CHAIN=${{ env.VITE_APP_DEFAULT_CHAIN }}" >> .env
-          echo "VITE_APP_CHALLENGES_API_URL=${{ vars.WS_SAPI_URL }}" >> .env
-          cat .env | wc -l
-          nix-shell --command "bash scripts/build.sh"
+          
+          # Filter and override with existing non-empty VITE_APP_ variables
+          echo "Appending valid overrides to .env:"
+          while IFS='=' read -r key value; do
+          if [[ "$key" == VITE_APP_* ]] && [[ -n "$value" ]]; then
+            echo "$key=$value" >> .env
+            echo "$key added"
+          fi
+          done < <(env)
+          
+          # Check if .env file exists and has content
+          line_count=$(cat .env | wc -l)
+          echo "Environment file has $line_count lines"
+          if [ "$line_count" -eq 0 ]; then
+            echo "Error: .env file is empty!"
+            exit 1
+          fi
+
+      - name: Build the application
+        env:
+          BUILD_TARGET: 'production'
+        run: nix-shell --command "bash scripts/build.sh"
 
       - name: Set up SSH agent
         uses: webfactory/ssh-agent@v0.5.3
