refactor: consolidate identity management and improve account handling
- Create specialized hooks for identity, wallet accounts, and XCM parameters
- Streamline alert management with centralized useAlerts hook
- Enhance identity fetching with better type safety and utility functions
- Improve component organization with proper separation of concerns
- Add support for identity field handling and management
- Fix challenge state management and error handling
- Update type annotations throughout the codebase
- Remove unused code and improve import organization
- Enhance formatting for amounts and alerts display

--- a/.env.example
+++ b/.env.example
@@ -11,13 +11,13 @@ VITE_APP_REGISTRAR_INDEX__PEOPLE_PASEO=1
 # fee 0
 VITE_APP_REGISTRAR_INDEX__PEOPLE_ROCOCO=0   
 
-VITE_APP_CHALLENGES_API_URL=wss://api.w3reg.org
+VITE_APP_CHALLENGES_API_URL=wss://sapi.w3reg.org
 
 VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people # rococo_people
 
 # Invite links for challenges
 VITE_APP_INVITE_LINK_DISCORD=https://discord.gg/Su6ZSZe3ra
-VITE_APP_INVITE_LINK_MATRIX=https://matrix.to/#/#w3reg:matrix.rotko.net
+VITE_APP_INVITE_LINK_MATRIX="https://matrix.to/#/#w3reg:matrix.rotko.net"
 VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/rotkonetworks
 VITE_APP_INVITE_LINK_EMAIL=mailto:w3reg@rotko.net
 
