--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "rxjs": "^7.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
+    "terser": "^5.39.0",
     "unicorn-magic": "0.1.0",
     "valtio": "^2.1.2"
   },
