feat: Add WebSocket URLs for Polkadot, Kusama, Paseo, and Westend networks

--- a/.env.example
+++ b/.env.example
@@ -35,5 +35,15 @@ VITE_APP_CONTACT_LINK_DISCORD=https://discord.com/channels/1256944894250057738/1
 VITE_APP_CONTACT_LINK_MATRIX="https://matrix.to/#/#w3reg:matrix.rotko.net"
 VITE_APP_CONTACT_LINK_EMAIL=mailto:w3reg@rotko.net
 
+VITE_APP_POLKADOT_WS_URL=wss://sys.turboflakes.io/polkadot
+VITE_APP_KUSAMA_WS_URL=wss://sys.turboflakes.io/kusama
+VITE_APP_PASEO_WS_URL=wss://sys.turboflakes.io/paseo
+VITE_APP_WESTEND_WS_URL=wss://sys.turboflakes.io/westend
+
+VITE_APP_POLKADOT_PEOPLE_WS_URL=wss://sys.turboflakes.io/people-polkadot
+VITE_APP_KUSAMA_PEOPLE_WS_URL=wss://sys.turboflakes.io/people-kusama
+VITE_APP_PASEO_PEOPLE_WS_URL=wss://sys.turboflakes.io/people-paseo
+VITE_APP_WESTEND_PEOPLE_WS_URL=wss://sys.turboflakes.io/people-westend
+
 # Optional
 VITE_APP_DEFAULT_CHAIN=paseo_people
