--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint": "eslint",
+    "lint:fix": "eslint --fix"
   },
   "dependencies": {
     "@iconify/react": "^5.1.0",
@@ -36,6 +36,8 @@
     "@reactive-dot/utils": "^0.8.1",
     "@reactive-dot/wallet-ledger": "0.16.21",
     "@reactive-dot/wallet-walletconnect": "0.17.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "@unocss/reset": "^0.63.4",
     "bignumber.js": "^9.1.2",
     "bun": "^1.1.38",
@@ -44,6 +46,8 @@
     "cmdk": "1.0.0",
     "dot-connect": "^0.13.2",
     "dot-identicon": "^0.1.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "lit-html": "^3.2.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.456.0",
@@ -69,7 +73,7 @@
     "@unocss/preset-attributify": "^0.63.4",
     "@vitejs/plugin-react-swc": "^3.7.2",
     "eslint": "^9.16.0",
-    "eslint-plugin-react": "^7.37.2",
+    "eslint-plugin-react": "^7.37.5",
     "globals": "^15.13.0",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.18.0",
