fix: Update Twitter link and add challenge account links in .env.example

--- a/.env.example
+++ b/.env.example
@@ -28,12 +28,16 @@ VITE_APP_AVAILABLE_CHAINS=polkadot_people,ksmcc3_people,paseo_people # rococo_pe
 # Invite links for challenges
 VITE_APP_INVITE_LINK_DISCORD=https://discord.gg/Su6ZSZe3ra
 VITE_APP_INVITE_LINK_MATRIX="https://matrix.to/#/#w3reg:matrix.rotko.net"
-VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/rotkonetworks
+VITE_APP_INVITE_LINK_TWITTER=https://twitter.com/w3registrar
 VITE_APP_INVITE_LINK_EMAIL=mailto:w3reg@rotko.net
 
 VITE_APP_CONTACT_LINK_DISCORD=https://discord.com/channels/1256944894250057738/1256957066439037028
 VITE_APP_CONTACT_LINK_MATRIX="https://matrix.to/#/#w3reg:matrix.rotko.net"
-VITE_APP_CONTACT_LINK_EMAIL=mailto:w3reg@rotko.net
+VITE_APP_CONTACT_LINK_EMAIL=w3reg@rotko.net
+
+VITE_APP_CHALLENGES_PRIVATE_ACCOUNT_MATRIX="w3reg"
+VITE_APP_CHALLENGES_PRIVATE_ACCOUNT_TWITTER="@w3r"
+VITE_APP_CHALLENGES_PRIVATE_ACCOUNT_DISCORD="w3reg"
 
 # Optional
 VITE_APP_DEFAULT_CHAIN=paseo_people
