feat: Update package.json to add new dependencies for enhanced functionality

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@polkadot-api/descriptors": "file:.papi/descriptors",
     "@polkadot-api/ws-provider": "^0.4.0",
+    "@polkadot/keyring": "^13.5.3",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
     "@radix-ui/react-aspect-ratio": "1.1.1",
@@ -43,16 +44,21 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@reactive-dot/core": "^0.43.1",
+    "@reactive-dot/react": "^0.43.1",
     "@reactive-dot/wallet-ledger": "^0.16.42",
     "@reactive-dot/wallet-walletconnect": "^0.17.23",
     "autoprefixer": "^10.4.21",
+    "bignumber": "^1.1.0",
+    "bignumber.js": "^9.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "dot-connect": "^0.19.0",
+    "dot-identicon": "^0.1.2",
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.454.0",
     "polkadot-api": "^1.14.1",
     "react": "^19",
@@ -66,6 +72,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "latest",
+    "valtio": "^2.1.5",
     "vaul": "^0.9.6",
     "zod": "^3.24.1"
   },
